# Dr-Kudale-s-clinic

./: .gitignore  Contact.css  Contact.html  Contact.js  Contactss.html  Homepage.html  LICENSE  README.md  Service.html  appointment.html  connect.php  index.js  package-lock.json  package.json  pyproject.toml
Doctors/: DrSheetalKudale.html
Homepage/: Homepage.css  Homepage.html
Public/Css/: Homepage.css
Public/Js/: Homepage.js
db/: conn.js
src/: app.js  processform.js
src/dr_kudale_s_clinic/: __init__.py
views/: AboutDoctors.ejs  Contactss.ejs  DrMaheshKudale.ejs  DrSheetalKudale.ejs  Homepage.ejs  Homepage.html  Service.ejs
